Update voyager version in libs.versions.toml
Uncommented voyager version and updated to 1.1.0-beta03

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ material-icons = "1.7.8"
 navCompose = "2.9.5"
 #koin = "3.5.3"
 #voyager = "1.0.0-rc08"
+voyager = "1.1.0-beta03"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
