--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,36 +5,36 @@ android-minSdk = "24"
 #noinspection OldTargetApi
 android-targetSdk = "35"
 androidx-activity = "1.11.0"
-androidx-appcompat = "1.7.1"
-androidx-core = "1.17.0"
-androidx-espresso = "3.7.0"
+#androidx-appcompat = "1.7.1"
+#androidx-core = "1.17.0"
+#androidx-espresso = "3.7.0"
 androidx-lifecycle = "2.9.5"
-androidx-testExt = "1.3.0"
+#androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-rc02"
 composeMultiplatform = "1.9.1"
-junit = "4.13.2"
+#junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
-material-icons = "1.7.8"
+#material-icons = "1.7.8"
 navCompose = "2.9.5"
 #koin = "3.5.3"
-#voyager = "1.0.0-rc08"
+voyager = "1.1.0-beta03"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
-junit = { module = "junit:junit", version.ref = "junit" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
-androidx-testExt-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espresso" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+#kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
+#junit = { module = "junit:junit", version.ref = "junit" }
+#androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
+#androidx-testExt-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
+#androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espresso" }
+#androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 
-material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "material-icons" }
-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
+#material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "material-icons" }
+#material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose" }
 
 # Koin
@@ -45,6 +45,17 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 #koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 
 # Voyager Navigation
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
+voyager-screenModel = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyager" }
+voyager-bottomSheetNavigator = { module = "cafe.adriel.voyager:voyager-bottom-sheet-navigator", version.ref = "voyager" }
+voyager-tabNavigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager" }
+voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
+voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
+#voyager-hilt = { module = "cafe.adriel.voyager:voyager-hilt", version.ref = "voyager" }
+#voyager-kodein = { module = "cafe.adriel.voyager:voyager-kodein", version.ref = "voyager" }
+#voyager-rxjava = { module = "cafe.adriel.voyager:voyager-rxjava", version.ref = "voyager" }
+
+
 #voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 #voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
 #voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
