--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,17 +8,18 @@ androidx-activity = "1.11.0"
 #androidx-appcompat = "1.7.1"
 #androidx-core = "1.17.0"
 #androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.5"
+androidx-lifecycle = "2.9.6"
 #androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-rc02"
-composeMultiplatform = "1.9.1"
+composeMultiplatform = "1.9.3"
 #junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 #material-icons = "1.7.8"
-navCompose = "2.9.5"
+navCompose = "2.9.6"
 #koin = "3.5.3"
 voyager = "1.1.0-beta03"
+coil-compose = "2.7.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -36,6 +37,7 @@ kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-s
 #material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "material-icons" }
 #material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
 
 # Koin
 #koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
