--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ kotlinx-coroutines = "1.10.2"
 navCompose = "2.9.6"
 #koin = "3.5.3"
 voyager = "1.1.0-beta03"
-coil-compose = "2.7.0"
+#coil-compose = "2.4.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -37,7 +37,7 @@ kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-s
 #material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "material-icons" }
 #material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navCompose" }
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
+#coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
 
 # Koin
 #koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
